# pairedANNS

./: README.md
DB-LSH/dbLSH/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  dblsh  ethz-1  lendb-1  lendb-2  lendb-3  lendb-4  txed-1  vcseis-1
DB-LSH/dbLSH/RStar_index_file/: 35_rstar.rt  3_rstar.rt
DB-LSH/dbLSH/logs/: deep-log1.txt  deep-log2.txt  deep-log3.txt  deep-log4.txt  deep-log5.txt  deep-log6.txt  deep-log7.txt  deep-log8.txt  deep-log9.txt  imageNet-log1.txt  imageNet-log2.txt  imageNet-log3.txt  imageNet-log4.txt  imageNet-log5.txt  imageNet-log6.txt  imageNet-log7.txt  imageNet-log8.txt  imageNet-log9.txt  sift-log1.txt  sift-log2.txt  sift-log3.txt  sift-log4.txt  sift-log5.txt  sift-log6.txt  sift-log7.txt  sift-log8.txt  sift-log9.txt  ukbench-log1.txt  ukbench-log2.txt  ukbench-log3.txt  ukbench-log4.txt  ukbench-log5.txt  ukbench-log6.txt  ukbench-log7.txt  ukbench-log8.txt  ukbench-log9.txt  uqv-log1.txt  uqv-log2.txt  uqv-log3.txt  uqv-log4.txt  (+5 more)
DB-LSH/dbLSH/memScripts/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
DB-LSH/dbLSH/newscripts2/: 1-1.sh  1-1.txt  1-2.sh  1-2.txt  1-3.sh  1-3.txt  1-4.sh  1-4.txt  1-5.sh  1-5.txt  ethz-1  test.txt
DB-LSH/dbLSH/newscripts3/: 1-1.sh  1-1.txt  1-2.sh  1-2.txt
DB-LSH/dbLSH/scripts/: log1.txt  log10.txt  log11.txt  log12.txt  log13.txt  log14.txt  log15.txt  log16.txt  log17.txt  log18.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt  log9.txt  run_all.sh  run_all_2.sh  script1.sh  script10.sh  script11.sh  script12.sh  script13.sh  script14.sh  script15.sh  script16.sh  script17.sh  script18.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
DB-LSH/dbLSH/scripts2/: 33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  log19.txt  log20.txt  log21.txt  log22.txt  log23.txt  log24.txt  log25.txt  log26.txt  log27.txt  log29.txt  log30.txt  log31.txt  log32.txt  run_all.sh  script19.sh  script20.sh  script21.sh  script22.sh  script23.sh  script24.sh  script25.sh  script26.sh  script27.sh  script28.sh  script29.sh  script30.sh  script31.sh  script32.sh  script33.sh  script34.sh  script35.sh  script36.sh  (+4 more)
DB-LSH/dbLSH/src/: Preprocess.cpp  Preprocess.h  Query.cpp  Query.h  StructType.h  basis.cpp  main.cpp
PM-LSH/pmlsh/: CMakeLists.txt  CMakeUserPresets.json
PM-LSH/pmlsh/experiment/: result.csv  result_all.csv
PM-LSH/pmlsh/logs/: ISC_EHB_DepthPhases-log1.txt  ISC_EHB_DepthPhases-log15.txt  ISC_EHB_DepthPhases-log16.txt  ISC_EHB_DepthPhases-log17.txt  ISC_EHB_DepthPhases-log18.txt  ISC_EHB_DepthPhases-log19.txt  ISC_EHB_DepthPhases-log2.txt  ISC_EHB_DepthPhases-log20.txt  ISC_EHB_DepthPhases-log21.txt  ISC_EHB_DepthPhases-log3.txt  ISC_EHB_DepthPhases-log31.txt  ISC_EHB_DepthPhases-log32.txt  ISC_EHB_DepthPhases-log33.txt  ISC_EHB_DepthPhases-log4.txt  ISC_EHB_DepthPhases-log5.txt  ISC_EHB_DepthPhases-log6.txt  ISC_EHB_DepthPhases-log7.txt  Iquique-log1.txt  Iquique-log15.txt  Iquique-log16.txt  Iquique-log17.txt  Iquique-log18.txt  Iquique-log19.txt  Iquique-log2.txt  Iquique-log20.txt  Iquique-log21.txt  Iquique-log3.txt  Iquique-log31.txt  Iquique-log32.txt  Iquique-log33.txt  Iquique-log4.txt  Iquique-log5.txt  Iquique-log6.txt  Iquique-log7.txt  MNIST-log1.txt  MNIST-log10.txt  MNIST-log11.txt  MNIST-log12.txt  MNIST-log13.txt  MNIST-log14.txt  (+1030 more)
PM-LSH/pmlsh/memscript11/: MNIST.sh  audio.sh  big-script-template-1.sh  deep.sh  gen_scripts.py  glove.sh  imageNet.sh  millionSong.sh  notre.sh  nuswide.sh  run_all.sh  sift.sh  sun.sh
PM-LSH/pmlsh/memscript12/: MNIST_hundred.sh  audio_hundred.sh  big-script-template-1.sh  deep_hundred.sh  gen_scripts.py  glove_hundred.sh  imageNet_hundred.sh  millionSong_hundred.sh  notre_hundred.sh  nuswide_hundred.sh  run_all.sh  sift_twenty.sh  sun_hundred.sh
PM-LSH/pmlsh/memscript2/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
PM-LSH/pmlsh/memscript3/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
PM-LSH/pmlsh/memscript4/: ISC_EHB_DepthPhases.sh  Iquique.sh  Meier2019JGR.sh  Music.sh  NEIC.sh  OBS.sh  OBST2024.sh  PNW.sh  Yelp.sh  big-script-template-1.sh  gen_script_3.py  run_all.sh
PM-LSH/pmlsh/memscript5/: MNIST.sh  audio.sh  deep.sh  gen_scripts.py  glove.sh  imageNet.sh  millionSong.sh  notre.sh  nuswide.sh  sift.sh  sun.sh
PM-LSH/pmlsh/memscript6/: big-script-template-1.sh  deep.sh  glove.sh  imageNet.sh  notre.sh  nuswide.sh  run_all.sh  sift.sh
PM-LSH/pmlsh/memscript6copy/: MNIST.sh  audio.sh  millionSong.sh  sun.sh
PM-LSH/pmlsh/memscript7/: MNIST.sh  big-script-template-1.sh  deep.sh  imageNet.sh  notre.sh  nuswide.sh
PM-LSH/pmlsh/memscript7copy/: audio.sh  glove.sh  millionSong.sh  sift.sh  sun.sh
PM-LSH/pmlsh/memscript8/: ISC_EHB_DepthPhases.sh  Iquique.sh  MNIST.sh  Meier2019JGR.sh  Music.sh  NEIC.sh  OBS.sh  OBST2024.sh  PNW.sh  Yelp.sh  agnews-mxbai-1024-euclidean.sh  arxiv-nomic-768-normalized.sh  astro1m.sh  audio.sh  bigann.sh  ccnews-nomic-768-normalized.sh  celeba-resnet-2048-cosine.sh  cifar.sh  crawl.sh  deep.sh  (+40 more)
VAQ22/: CMakeLists.txt  README.md  run_scripts_1.sh  tests.txt
VAQ22/bitvecengine/: CMakeLists.txt  VAQ.cpp  VAQ.hpp  VAQ_PQ.cpp  big-script-c-debug.sh
VAQ22/demos/: CMakeLists.txt  demo_PQ.cpp
VAQ22/examples/: .CMakeLists.txt.swp  CMakeLists.txt  demo_vaq.cpp  demo_vaq_hyperparameter_tuning copy.cpp  demo_vaq_hyperparameter_tuning.cpp  demo_vaq_hyperparameter_tuning_v1.cpp  learning.cpp
VAQ22/glpklib/: build-glpk-lib.sh
VAQ22/test/: test-bitvecengine.cpp  test-bitvector.cpp  test-distancefunction.cpp
lorann/: .gitignore  CITATION  Doxyfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
lorann/docs/: conf.py  cpp.rst  index.rst  python.rst
lorann/examples/: example.py  gpu_example.py
lorann/lorann/: clustering.h  lorann.h  lorann_base.h  lorann_fp.h  lorann_quant.h  quant.h  serialization.h  utils.h
lorann/python/: lorannmodule.cc
lorann/tests/: test_lorann.py
(+514 files in other folders)
