[build-system]
requires = ["setuptools>=42", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["python"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '(\.pyi?$)'
exclude = '''

(
  /(
      \.github
    | \.vscode
    | \.venv
    | docs\/
    | licenses\/
    | src\/
  )/
)
'''

[tool.ruff]
line-length = 100
indent-width = 4

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
]
